<resources>
    <string name="app_name">AppDonacion</string>

    <!---Login-->
    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="btn_registrarse">Registrarse</string>

    <string name="btn_inicioSesion">Iniciar Sesión</string>
    <string name="btn_registro">Registrarse</string>
    <string name="btn_volver">Volver a inicio</string>
    <string name="btn_cerrarSesion">Cerrar Sesión</string>

    <string name="correo">Correo</string>
    <string name="nombre">Nombre de usuario</string>
    <string name="localidad">Localidad</string>
    <string name="contrasena">Contraseña</string>
    <string name="recontrasena">Confirmación de contraseña</string>


    <!---Maestro/Detalle-->
    <string name="donaciones">Listado de productos donados:</string>

    <!---Nombres-->
    <string name="aceite">Aceite</string>
    <string name="arroz">Arroz</string>
    <string name="fideo">Fideos</string>
    <string name="lenteja">Lentejas</string>
    <string name="polenta">Polenta</string>

    <!---Informacion-->
    <string name="aceiteInfo">Botella aceite girasol</string>
    <string name="arrozInfo">Paquete de arroz</string>
    <string name="fideoInfo">Paquete de fideo</string>
    <string name="lentejaInfo">Paquete de lenteja</string>
    <string name="polentaInfo">Paquete de polenta</string>

    <!---Descripcion-->
    <string name="aceiteDesc">Tengo dos botellas de aceite girasol para donar</string>
    <string name="arrozDesc">Tengo cuatro paquetes de arroz marca Aliada para donar</string>
    <string name="fideoDesc">Tengo ocho paquetess de fideos marca Molitalia para donar</string>
    <string name="lentejaDesc">Tengo tres paquetes de lentejas para donar</string>
    <string name="polentaDesc">Tengo diez paquetes de polenta marca Presto Pronta para donar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_donaciones">Donaciones</string>

    <string name="menu_mapa">Mapa</string>
    <string name="menu_info">Configuración</string>
    <string name="menu_nosotros">Acerca de nosotros</string>
    <string name="logout">Cerrar sesión</string>

    <string name="donadoPor">Donado por:</string>
    <string name="correoU">Correo:</string>
    <string name="ubiUsuario">Ubicación:</string>
    <string name="donacionDe">Articulo donado:</string>
    <string name="estadoDetalle">Estado/Detalles:</string>
    <string name="cantidadDet">Cantidad:</string>
    <string name="descDona">Descripción:</string>
    <string name="nameUser">Nombre Usuario</string>
    <string name="ubiUser">Direccion</string>
    <string name="nameProduct">¿Que va donar?</string>
    <string name="descProduct">Descripción de su donación</string>
    <string name="detailProducto">Detalles(Estado del producto)</string>
    <string name="cantProduct">Cantidad</string>
    <string name="subirImagen">Subir Imagen</string>
    <string name="subirDonacion">Subir Donación</string>

    <string name="idioma">Cambiar idioma</string>
    <string name="ingles">Ingles</string>
    <string name="espaniol">Español</string>
    <string name="frances">Frances</string>

    <string name="btn_mapa">Ver ubicación</string>
    <string name="telefono">Telefono</string>
    <string name="sesión_iniciada">Ha iniciado sesion correctamente</string>
    <string name="es_tuyo">Este producto es tuyo!</string>
    <string name="usuario_de_datos">El usuario de datos:</string>
    <string name="su_correo">Correo: </string>
    <string name="solicito_tu">Solicitó tu:</string>
    <string name="nombre_objeto">Nombre del objeto</string>
    <string name="detalle_objeto">Detalle del Objeto</string>
    <string name="hablar_x_ws">Hablar por whatsapp</string>
    <string name="nombre_producto">NombreProducto</string>
    <string name="description">Descripcion</string>
    <string name="detalles">Detalles</string>
    <string name="cantidad">Cantidad</string>
    <string name="solicitar">Solicitar</string>
    <string name="name">Nombre</string>
    <string name="usuario_notificado">El usuario ha sido notificado!</string>
    <string name="producto_agregado">Producto Agregado</string>
    <string name="sesion_cerrada">Se ha cerrado la sesión</string>
    <string name="no_hay_permisos_camara">No tienes permisos para utilizar la cámara</string>
    <string name="error_auth">Error: Debe ingresar un usuario y contraseña validos</string>
    <string name="comprobar_auth">Error: compruebe su usuario y contraseña</string>
    <string name="no_tienes_ws">No tienes whatsapp instalado en tu teléfono</string>
    <string name="usuario_creado">Usuario creado.</string>
    <string name="no_coinciden">Las contraseñas no coinciden</string>
    <string name="baja_version">No es la versión 6 de android o posteriores</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="danativos">Donativos cercanos</string>
    <string name="error">An error has occurred</string>

</resources>