<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_donation"
            android:title="@string/menu_donaciones" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_nosotros"
            android:icon="@drawable/ic_info_us"
            android:title="@string/menu_nosotros" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power"
            android:title="@string/logout" />

    </group>
</menu>