<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <LinearLayout
        android:layout_width="321dp"
        android:layout_height="650dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="143dp"
            app:srcCompat="@drawable/logodonando" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/correo"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/localidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/localidad"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/telefono_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/telefono"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/contrasena"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/contrasenaConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/recontrasena"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/iniciarSesionBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registrarUsuario"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btn_registro" />
        <Button
            android:id="@+id/volverBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="irInicio"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btn_volver" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>